added some frontent code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi i am jagan</h1>
+    <h1>hi i am jagan pondy</h1>
+    <h1>frontend Changed</h1>
 </body>
 </html>
